# ClipSync

./: .gitignore  README.md  TODO.md  package-lock.json  package.json
.antigravitycli/: 8f013332-7842-4bda-b6e4-31e43e1b2a7e.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/commands/: clipboard.rs  mod.rs  settings.rs  status.rs
src-tauri/src/domain/: models.rs  state.rs
src-tauri/src/network/: mod.rs
src-tauri/src/network/discovery/: mdns.rs  mod.rs  udp.rs
src-tauri/src/network/transport/: client.rs  handshake_loop.rs  mod.rs  server.rs
src-tauri/src/services/: hashing.rs  logging.rs  mod.rs  security.rs  settings.rs  tray.rs
src/app/: AppShell.tsx
src/features/clipsync/hooks/: useClipSyncController.ts
src/features/dashboard/: DashboardView.tsx
src/features/layout/: AppFooter.tsx  AppHeader.tsx
src/features/settings/: SettingsView.tsx
src/features/validation/: ValidationView.tsx
src/shared/api/: clipsyncApi.ts
src/shared/lib/: defaults.ts  logger.ts
src/shared/types/: clipsync.ts
