[package]
name = "clipsync"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"

# For future mDNS
mdns-sd = "0.19.0"
whoami = "1.6.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-autostart = "2"
